--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
-<
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+ul,nav{
+    list-style: none;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: none;
+}
